<resources>
    <string name="app_name">Road Trip</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign up</string>
    <string name="registration">Registration</string>

    <!-- Arafa Start -->
    <string name="start_point">Start Point</string>
    <string name="end_point">End Point</string>
    <string name="trip_name">Trip Name</string>
    <string name="trip_date">Trip Date</string>
    <string name="trip_time">Trip Time</string>
    <string name="two_way">Two Way   </string>
    <string name="note">Note name</string>
    <string name="add_trip">Add Trip</string>
    <string-array name="Trip_arrays">
        <item>No Repeat</item>
        <item>Repeat Daily</item>
        <item>Repeat Weekly</item>
        <item>Repeat Monthly</item>
    </string-array>
    <string-array name="units">
        <item>Days</item>
        <item>Weeks</item>
    </string-array>
    <!-- Arafa End ******************************** -->
    <!-- Mai Start -->
    <string name="Login">Login</string>
    <string name="Email">E-mail</string>
    <string name="Password">Password</string>
    <string name="NotAMember">Not A Member?</string>
    <string name="SignUp">Sign Up</string>
    <string name="Backdate">Back Trip Date</string>
    <string name="backTime">Back Trip Time</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="settings">...</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="view_notes">View Notes</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="start_trip">Start Trip</string>
    <string name="delete">Are you sure to delete this trip ?</string>
    <string name="Notes">Notes</string>
    <string name="checkbox">CheckBox</string>
    <string name="start_points">start point</string>

    <!-- Mai End ********************************** -->
    <!-- Salma Start -->


    <!-- Salma End ********************************* -->
</resources>
